# omura-benchmrks

./: README.md  benchmark_coco_retrieval.py  benchmark_omura_emmbed.py  embedding_backend.py  generate_activation_atlas.py  pyproject.toml
benchmarks/results/: coco500_fixed_padding.json  coco_1000_default.json  coco_1000_localneg100.json  coco_100_localneg10.json  coco_100x1.json  coco_activation_atlas_1k_stats.json  coco_activation_atlas_stats.json  coco_retrieval.json  coco_retrieval_1k.json  coco_retrieval_1k_1cap_biggest.json  coco_retrieval_200_omura.json  coco_retrieval_200_siglip2.json  coco_retrieval_smoke_biggest_siglip2.json  karpathy_val_full.json  karpathy_val_smoke.json  omura_emebd_coco100_smoke.json  path_check.json  repro_gpu5_run1.json  repro_gpu5_run2.json
results/: repro_recall10.json  repro_run1.json  repro_run2.json
