[project]
name = "omura-benchmarks"
version = "0.1.0"
description = "Standalone benchmark suite for Omura embeddings"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "matplotlib>=3.8.0",
  "pillow>=10.0.0",
  "torch>=2.1.0",
  "transformers>=4.45.0",
  "tqdm>=4.66.0",
]

[tool.uv]
package = false
